--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -118,11 +118,12 @@
                 </ul>
               </div>
             </li>
+            <li routerLink="/our-theme" >
+              <a class="act" >Our Theme</a>
+             </li>
             <li><a class="act" routerLink="/FAQ">FAQ</a></li>
             <li><a class="act" routerLink="/contact">Contact Us</a></li>
-            <li routerLink="/our-theme" >
-             <a class="act" >Our Theme</a>
-            </li>
+            
           </div>
         </div>
         <div class="nav_col_3">
@@ -362,12 +363,9 @@
                 aria-expanded="false"
                 aria-controls="flush-collapseseven"
               >
-                <a routerLink="/contact">contact Us</a>
+                <a routerLink="/our-theme"> Our Theme</a>
               </button>
             </h2>
-            <!-- <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
-      </div> -->
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingseven">
@@ -379,60 +377,27 @@
                 aria-expanded="false"
                 aria-controls="flush-collapseseven"
               >
-                <a routerLink="/our-theme"> Our Theme</a>
+                <a routerLink="/contact">contact Us</a>
               </button>
             </h2>
             <!-- <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
         <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
       </div> -->
           </div>
-          <!-- <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingEight">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingten">
               <button
-                class="accordion-button collapsed"
-                type="button"
+                class="accord_btn collapsed"
+                type=""
                 data-bs-toggle="collapse"
-                data-bs-target="#flush-collapseEight"
+                data-bs-target="#flush-collapseseven"
                 aria-expanded="false"
-                aria-controls="flush-collapseEight"
+                aria-controls="flush-collapseseven"
               >
-                <a>
-                  <img src="assets/en.png" alt="flag" title="english" />
-                  English
-                </a>
+                <a routerLink="/FAQ">FAQ</a>
               </button>
             </h2>
-            <div
-              id="flush-collapseEight"
-              class="accordion-collapse collapse"
-              aria-labelledby="flush-headingEight"
-              data-bs-parent="#accordionFlushExample"
-            >
-              <div class="accordion-body">
-                <img src="assets/pt-br.png" title="Portuguese (Brazil)" />
-                Portuguese (Brazil)
-              </div>
-              <div class="accordion-body">
-                <img src="assets/es.png" title="Spanish" /> Spanish
-              </div>
-              <div class="accordion-body">
-                <img src="assets/fr.png" title="French" /> French
-              </div>
-              <div class="accordion-body">
-                <img src="assets/de.png" title="German" /> German
-              </div>
-              <div class="accordion-body">
-                <img src="assets/ja.png" title="Japanese" /> Japanese
-              </div>
-              <div class="accordion-body">
-                <img src="assets/tr.png" title="Terkish" /> Terkish
-              </div>
-              <div class="accordion-body">
-                <img src="assets/zh.png" title="Chinese (Simplified)" />
-                Chinese (Simplified)
-              </div>
-            </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
