--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -388,7 +388,7 @@ flex-wrap: wrap;
     font-size: 2.8em;
     margin-bottom: 0.8em;
     text-align: center;
-    font-family: 'Gilroy-Bold';
+    font-family: Poppins;
     padding-top: 38px;}}
 .copy {
   background: rgb(160, 197, 40);}
