--- a/src/app/our-theme/our-theme.component.css
+++ b/src/app/our-theme/our-theme.component.css
@@ -263,9 +263,9 @@ margin-left: 20px;
 }
 
 
-.theme_header{
+.theme_header {
     color: #a0c228;
     font-size: 35px;
     font-weight: 600;
-    font-family: 'Poppins';
+    font-family: Poppins;
 }
