--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -2,7 +2,7 @@
 <div class="main-container">
     <div class="container1">
         <div class="left-content">
-            <h1>We are VRNL</h1>
+            <h1 class="theme_header">We are VRNL</h1>
             <p><strong>THE BIGGEST PLATFORM FOR PROVIDING ONLINE CASINO BETTING ID’s</strong>The widest selection of entertainment games available online White Label Casino with more than 10,00 games. Available online casino software is simple as our platform is easy to manage.</p>
             <ul>
                 <li>
