--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -108,8 +108,8 @@
           <br />products.
         </p>
         <p class="casino_whites_sec_p">
-          In order to speed up your business, we offer <span> <a href="/casino" style="color: #a0c528; cursor: pointer;">White Label Casino</a></span> with
-          more than 30,000 games.
+          In order to speed up your business, we offer <span routerLink="/casino" style="color: #a0c528;"> White Label Casino</span> with
+          more than 10,00 games.
         </p>
 
         <div class="seprator" style="
