--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -28,7 +28,11 @@
             </a>
           </div>
           <div class="row_col_1">
-            <p class="contact_a">+918268808222</p>
+
+            <div class="row_2">
+            <p class="contact_a">| +918268088383 | +918268808222 |</p>
+          
+          </div>
           </div>
         </div>
       </div>
