--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -30,7 +30,7 @@
           <div class="row_col_1">
 
             <div class="row_2">
-            <p class="contact_a">| +918268088383 | +918268808222 |</p>
+            <p class="contact_a"> +918268088383 | +918268808222 </p>
           
           </div>
           </div>
