--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -3,7 +3,7 @@
     <div class="container1">
         <div class="left-content">
             <h1 class="theme_header">We are VRNL</h1>
-            <p><strong>THE BIGGEST PLATFORM FOR PROVIDING ONLINE CASINO BETTING ID’s</strong>The widest selection of entertainment games available online White Label Casino with more than 10,00 games. Available online casino software is simple as our platform is easy to manage.</p>
+            <p><strong>THE BIGGEST PLATFORM FOR PROVIDING  SPORTS AND CASINO WHITE LABEL</strong> The widest selection of entertainment games available online White Label Casino with more than 1,000 games. Available online casino software is simple as our platform is easy to manage.</p>
             <ul>
                 <li>
                     Sleek and Modern Design
