--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -65,12 +65,12 @@
         <p class="white_para">
           Already applied for a gaming license? Get our Turnkey
           <a href="/chck.html"
-            ><span class="white_change"><a href="/sports-betting-software" class="white_change">sport betting software.</a> </span></a
+            ><span class="white_change"><a routerLink="/sports-betting-software" class="white_change">sport betting software.</a> </span></a
           >
         </p>
         <p class="white_para">
           Not applied yet? You can use our License or apply for one
-          <span class="white_change"><a href="/white-label-betting-platform" class="white_change">white label sportsbook</a> </span>
+          <span class="white_change"><a routerLink="/white-label-betting-platform" class="white_change">white label sportsbook</a> </span>
         </p>
         <p class="white_para">
           In both cases we provide a complete, performing and secure betting
