--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -11,7 +11,7 @@
         <div class="contact_details">
           <div class="row_col" style="cursor: pointer;">
             <a href="skype:live:9960f32f776599a2?chat">
-            <img src="assets/Skype_logo.webp" />
+            <img src="assets/Skype_logo.webp" alt="skype"/>
           </a>
           </div>
           <div class="row_col_1">
@@ -24,7 +24,7 @@
 
           <div class="row_col">
             <a href="https://wa.me/+918268808222">
-            <img class="whats_img" src="assets/Whatsapp.webp" />
+            <img class="whats_img" src="assets/Whatsapp.webp" alt="whatsapp" />
             </a>
           </div>
           <div class="row_col_1">
