--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     <nav>
       <div class="nav_row">
         <div class="nav_col">
-          <a ><img class="vrnl_logo" src="assets/VRNL new.png"  routerLink="/"/></a>
+          <img class="vrnl_logo" src="assets/VRNL new.png"  routerLink="/" alt="vrnl-logo"/>
         </div>
         <div class="nav_col_2">
           <div class="nav_row_2">
@@ -119,7 +119,7 @@
               </div>
             </li>
             <li routerLink="/our-theme" >
-              <a class="act" >Our Theme</a>
+              <a class="act" href="#" >Our Theme</a>
              </li>
             <li><a class="act" routerLink="/FAQ">FAQ</a></li>
             <li><a class="act" routerLink="/contact">Contact Us</a></li>
@@ -146,7 +146,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <div class="nav_col" routerLink="/">
-        <img src="assets/VRNL new.png" />
+        <img src="assets/VRNL new.png" alt="vrnl-logo" />
       </div>
       <button
         class="navbar-toggler"
@@ -353,7 +353,7 @@
               <!-- <div class="accordion-body"> Streaming platform</div> -->
             </div>
           </div>
-          <div class="accordion-item">
+          <div class="accordion-item"  routerLink="/our-theme">
             <h2 class="accordion-header" id="flush-headingseven">
               <button
                 class="accord_btn collapsed"
@@ -363,7 +363,7 @@
                 aria-expanded="false"
                 aria-controls="flush-collapseseven"
               >
-                <a routerLink="/our-theme"> Our Theme</a>
+                <a href="#"> Our Theme</a>
               </button>
             </h2>
           </div>
