--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -143,7 +143,7 @@
               <h2 class="accordion-header" id="flush-headingOne">
                 <button class="accord_btn collapsed" type="button" data-bs-toggle="collapse" routerLink="/our-theme"
                   data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="cursor:pointer;">
-                  <a >  Our Theme </a>
+                  <a href="#">  Our Theme </a>
                 </button>
               </h2>
           
