--- a/src/app/our-theme/our-theme.component.css
+++ b/src/app/our-theme/our-theme.component.css
@@ -92,7 +92,6 @@ p {
     width: 100%;
     font-size: 30px;
     font-weight: 700;
-    color: blacks;
     padding-top: 40px;
     color: black;
     
@@ -263,9 +262,9 @@ margin-left: 20px;
 }
 
 
-.theme_header {
+.theme_header{
     color: #a0c228;
     font-size: 35px;
     font-weight: 600;
-    font-family: Poppins;
+    font-family: 'Poppins';
 }
