--- a/src/app/scroll-btn/scroll-btn.component.html
+++ b/src/app/scroll-btn/scroll-btn.component.html
@@ -1,1 +1,1 @@
-<button class="scroll-button" (click)="scrollToTop()"> <i class="fa fa-long-arrow-up" ></i></button>
+<button  class="scroll-button" (click)="scrollToTop()" type="button" aria-labelledby="search-button-label"> <i class="fa fa-long-arrow-up" ></i></button>
