--- a/src/app/scroll-btn/scroll-btn.component.html
+++ b/src/app/scroll-btn/scroll-btn.component.html
@@ -1,1 +1,3 @@
-<button class="scroll-button" (click)="scrollToTop()"> <i class="fa fa-long-arrow-up" ></i></button>
+<button class="scroll-button" (click)="scrollToTop()" aria-label="Scroll to Top">
+    <i class="fa fa-long-arrow-up"></i>
+  </button>
