--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -51,15 +51,16 @@
             <label for="fname">Full name</label>
           </div>
           <div class="name_input">
-            <input type="text" id="fname"  [class.is-invalid]="fname.invalid && fname.touched" name="fname" value="" [(ngModel)]="contact.fname" #fname="ngModel" required />
+            <input type="text" id="fnameInput" [class.is-invalid]="fname.invalid && fname.touched" name="fname" value="" [(ngModel)]="contact.fname" #fname="ngModel" required />
+
             <br> <small style="color: #a0c528;font-size: 18px;" [class.d-none]="fname.valid || fname.untouched">The field is required.</small>
           </div>
           <div class="email_label">
             <label for="email"><b>Your email</b></label>
           </div>
           <div class="email_input">
-            <input type="text" id="email" [class.is-invalid]="femail.invalid && femail.touched" name="femail" value="" onkeypress="myFunction()" required femail
-              [(ngModel)]="contact.femail" #femail="ngModel" />
+         <input type="text" id="emailInput" [class.is-invalid]="femail.invalid && femail.touched" name="femail" value="" onkeypress="myFunction()" required femail [(ngModel)]="contact.femail" #femail="ngModel" />
+
               <br>  <small style="color: #a0c528;font-size: 18px;" [class.d-none]="femail.valid || femail.untouched">The field is required.</small>
           </div>
           <div class="email_label">
