--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,6 +7,7 @@
         </div>
         <div class="nav_col_2">
           <div class="nav_row_2">
+            <ul  class="nav_row_2">
             <li class="active ">
               <a class="act acthome current_page_item active" routerLink="/">Home</a>
             </li>
@@ -121,7 +122,7 @@
             </li>
             <li><a class="act" routerLink="/FAQ">FAQ</a></li>
             <li><a class="act" routerLink="/contact">Contact Us</a></li>
-
+          </ul>
           </div>
         </div>
         <div class="nav_col_3">
