--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -42,23 +42,23 @@
 
       <div class="company_about com">
         <h1 class="comp_header">Company</h1>
-        <div><p class="comp_list"><a routerLink="/about-us" >About Us</a></p></div>
-        <div><p class="comp_list"><a routerLink="/online-sportsbook-software">sportsbook Provider</a></p></div>
+        <div><p class="comp_list"><a routerLink="/about-us" aria-label="About">About Us</a></p></div>
+        <div><p class="comp_list"><a routerLink="/online-sportsbook-software" aria-label="Provider">sportsbook Provider</a></p></div>
         <!-- <div><p class="comp_list">News</p></div>
         <div><p class="comp_list">Certifications</p></div> -->
         <div>
-          <a routerLink="/privacy-policy"><p class="comp_list">Privacy Policy</p></a>
+          <a routerLink="/privacy-policy"><p class="comp_list" aria-label="Privacy">Privacy Policy</p></a>
         </div>
-        <div><p class="comp_list"><a routerLink="/contact" >Contact Us</a></p></div>
+        <div><p class="comp_list"><a routerLink="/contact" aria-label="contact">Contact Us</a></p></div>
       </div>
       <div class="company_about about_left">
         <h1 class="comp_header">Solutions</h1>
-        <div><p class="comp_list"><a routerLink="/sports-betting-software" >Sports Betting software</a></p></div>
+        <div><p class="comp_list"><a routerLink="/sports-betting-software"  aria-label="Betting">Sports Betting software</a></p></div>
         <!-- <div><p class="comp_list">Bitcoin Sportsbook</p></div> -->
         <!-- <div><p class="comp_list">Crypto casino</p></div> -->
-        <div><p class="comp_list"><a routerLink="/casino">White Label Casino</a></p></div>
-        <div><p class="comp_list"><a routerLink="/white-label-betting-platform" >White Label Betting Platform</a></p></div>
-        <div><p class="comp_list"><a routerLink="/sportsbook-iframe">Sportsbook iFrame</a></p></div>
+        <div><p class="comp_list"><a routerLink="/casino"  aria-label="White Label">White Label Casino</a></p></div>
+        <div><p class="comp_list"><a routerLink="/white-label-betting-platform"  aria-label="Platform">White Label Betting Platform</a></p></div>
+        <div><p class="comp_list"><a routerLink="/sportsbook-iframe" aria-label="Sportsbook">Sportsbook iFrame</a></p></div>
       </div>
     </div>
   </section>
