--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="container ">
         
-    <div class="card"><a href="https://www.skyexch.vrnlexch.com/"target="_blank">
+    <div class="card"><a href="https://skyexch.vrnlexch.com/"target="_blank">
         <div class="flip-box-front">
             <img class="lb_partner_logo logo1" src="assets/skylogo.png" alt="skylogo">
             <h4 class="logoname">Skyexch</h4>
