--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -43,7 +43,7 @@
                       </ul>
                     </div>
                   </li> -->
-                  <li><a routerLink="/sports-betting-software/esports-betting-software">eSports betting</a></li>
+                  <li><a routerLink="/sports-betting-software/esports-betting-software">Esports betting</a></li>
                 </ul>
               </div>
             </li>
@@ -120,7 +120,7 @@
             <li routerLink="/our-theme">
               <a class="act" href="#">Our Theme</a>
             </li>
-            <li><a class="act" routerLink="/FAQ">FAQ</a></li>
+            <li><a class="act" routerLink="/FAQ">Faq</a></li>
             <li><a class="act" routerLink="/contact">Contact Us</a></li>
           </ul>
           </div>
