--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -27,9 +27,9 @@
           B2c and  Casino or white label solutions.
         </p>
         <h2 class="header_plat">Try our B2B Betting software</h2>
-        <a class="platform_anchor" href="https://www.betskyexch.com/"target="_blank"><p>https://www.betskyexch.com/</p></a>
+        <a class="platform_anchor" href="https://skyexch.vrnlexch.com/"target="_blank"><p>https://skyexch.vrnlexch.com/</p></a>
         <h2 class="header_plat">Try our B2C Betting software</h2>
-        <a class="platform_anchor" href="https://cricbuzzer.io"target="_blank"><p>https://cricbuzzer.io</p></a>
+        <a class="platform_anchor" href="https://gullybet.vrnlexch.com/"target="_blank"><p>https://gullybet.vrnlexch.com/</p></a>
         <br />
         <button class="button_slide slide_right" (click)="scrollToContact()" routerLink="/contact">
           <i class="fa-solid fa-phone"></i> Contact us!
