--- a/src/app/contact-com/contact-com.component.css
+++ b/src/app/contact-com/contact-com.component.css
@@ -39,6 +39,7 @@
     font-size: 16px;
     margin-top: 15px;
     cursor: pointer;
+    display: inline-block;
 }
 .contact_a:hover{
     color: #000;
