--- a/src/app/contact-com/contact-com.component.css
+++ b/src/app/contact-com/contact-com.component.css
@@ -115,6 +115,7 @@ color: #000;
             width: 155px;
             font-size: 18px;
             height: 50px;
+            cursor: pointer;
           }
           .con_btn:hover{
             background-color: #000;
