--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -23,136 +23,211 @@
     </div>
     <div class="container ">
         
-    <div class="card"><a href="https://skyexch.vrnlexch.com/"target="_blank">
-        <div class="flip-box-front">
-            <img class="lb_partner_logo logo1" src="assets/skylogo.png" alt="skylogo">
+    <div class="card">
+        <div class="flip-box-front"> <a href="https://skyexch.vrnlexch.com/"target="_blank">
+            <img class="lb_partner_logo logo1" src="assets/skylogo.png" alt="skylogo"></a>
+           
             <h4 class="logoname">Skyexch</h4>
             </div>
-        <div class="card-content">
-            <h2>Username : vrnldemo</h2>
-          
-            <h2>Pass - Asdf1234</h2>
+            <div class="card-content">
+                <h2>
+                  Username : <span id="vrnldemo">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                </h2>
+                <h2>
+                  Password : <span id="password">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                </h2>
+              </div>
 
-        </div>
-    </a>
     </div>
-    <div class="card"><a href="https://velki.vrnlexch.com/"target="_blank">
-        <div class="flip-box-front">
-            <img class="lb_partner_logo logo2" src="assets/velkilogo.webp" alt="velkilogo" >
+    <div class="card">
+        <div class="flip-box-front"><a href="https://velki.vrnlexch.com/"target="_blank">
+            <img class="lb_partner_logo logo2" src="assets/velkilogo.webp" alt="velkilogo" ></a>
+            
             <h4 class="logoname " style="    padding-top: 60px;">Velki</h4>
             </div>
-        <div class="card-content">
-            <h2>Username : vrnldemo</h2>
-          
-            <h2>Pass - Asdf1234</h2>
+            <div class="card-content">
+                <h2>
+                  Username : <span id="vrnldemo">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                </h2>
+                <h2>
+                  Password : <span id="password">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                </h2>
+              </div>
 
-        </div>
-    </a>
     </div>
-    <div class="card">  <a href="https://gullybet.vrnlexch.com/"target="_blank">
-        <div class="flip-box-front">
-           <img class="lb_partner_logo logo3" src="assets/gullybet.webp" alt="gullybet" >
+    <div class="card">  
+        <div class="flip-box-front"> <a href="https://gullybet.vrnlexch.com/"target="_blank">
+           <img class="lb_partner_logo logo3" src="assets/gullybet.webp" alt="gullybet" ></a>
+          
             <h4 class="logoname" style="    padding-top: 45px;">Gullybet</h4>
-            </div>
-        <div class="card-content logo4">
-            <h2>Username : vrnldemo</h2>
-          
-            <h2>Pass - Asdf1234</h2>
 
-        </div>
-    </a>
+            </div>
+            <div class="card-content">
+                <h2>
+                  Username : <span id="vrnldemo">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                </h2>
+                <h2>
+                  Password : <span id="password">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                </h2>
+              </div>
+
     </div>
-    <div class="card"  ><a href="https://babu88.vrnlexch.com/"target="_blank">
-        <div class="flip-box-front">
-            <img class="lb_partner_logo logo4" src="assets/bb88_logo_w_sponsor.webp "alt="bb88_logo_w_sponsor" >
+    <div class="card"  >
+        <div class="flip-box-front"> <a href="https://babu88.vrnlexch.com/"target="_blank">
+            <img class="lb_partner_logo logo4" src="assets/bb88_logo_w_sponsor.webp "alt="bb88_logo_w_sponsor" ></a>
+           
             <h4 class="logoname">Babu88</h4>
             </div>
-        <div class="card-content">
-            <h2>Username : vrnldemo</h2>
-          
-            <h2>Pass - Asdf1234</h2>
+            <div class="card-content">
+                <h2>
+                  Username : <span id="vrnldemo">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                </h2>
+                <h2>
+                  Password : <span id="password">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                </h2>
+              </div>
 
-        </div>
-    </a>
     </div>
-    <div class="card"><a href="https://aura.vrnlexch.com/"target="_blank">
-        <div class="flip-box-front">
-            <img class="lb_partner_logo logo5" src="assets/aura.webp" alt="aura" >
+    <div class="card">
+        <div class="flip-box-front">   <a href="https://aura.vrnlexch.com/"target="_blank">
+            <img class="lb_partner_logo logo5" src="assets/aura.webp" alt="aura" ></a>
+         
             <h4 class="logoname">Aura444</h4>
-            </div>
-        <div class="card-content">
-            <h2>Username : vrnldemo</h2>
-          
-            <h2>Pass - Asdf1234</h2>
 
-        </div>
-    </a>
+            </div>
+            <div class="card-content">
+                <h2>
+                  Username : <span id="vrnldemo">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                </h2>
+                <h2>
+                  Password : <span id="password">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                </h2>
+              </div>
+
     </div>
-    <div class="card"><a href="http://www.diamond.vrnlexch.com/"target="_blank">
-        <div class="flip-box-front">
-            <img class="lb_partner_logo logo6" src="assets/diamond.png" alt="diamond" >
+    <div class="card">
+        <div class="flip-box-front"><a href="http://www.diamond.vrnlexch.com/"target="_blank">
+            <img class="lb_partner_logo logo6" src="assets/diamond.png" alt="diamond" ></a>
             <h4 class="logoname">Diamond</h4>
             </div>
-        <div class="card-content">
-            <h2>Username : vrnldemo</h2>
-          
-            <h2>Pass - Asdf1234</h2>
+            <div class="card-content">
+                <h2>
+                  Username : <span id="vrnldemo">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                </h2>
+                <h2>
+                  Password : <span id="password">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                </h2>
+              </div>
 
-        </div>
-    </a>
     </div>
-    <div class="card"><a href="https://lotus.vrnlexch.com/"target="_blank">
+    <div class="card">
         <div class="flip-box-front">
-            <img class="lb_partner_logo logo7" src="assets/lotus.webp" alt="lotus" >
+            <a href="https://lotus.vrnlexch.com/"target="_blank">
+            <img class="lb_partner_logo logo7" src="assets/lotus.webp" alt="lotus" ></a>
             <h4 class="logoname">Lotus</h4>
             </div>
-        <div class="card-content">
-            <h2>Username : vrnldemo</h2>
-          
-            <h2>Pass - Asdf1234</h2>
-
-        </div>
-    </a>
+            <div class="card-content">
+                <h2>
+                  Username : <span id="vrnldemo">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                </h2>
+                <h2>
+                  Password : <span id="password">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                </h2>
+              </div>
+   
     </div>
-    <div class="card"><a href="https://9bazi.vrnlexch.com/"target="_blank">
-        <div class="flip-box-front">
-            <img class="lb_partner_logo logo8" src="assets/logo-bazi.webp" alt="logo-bazi">
+    <div class="card">
+        <div class="flip-box-front"><a href="https://9bazi.vrnlexch.com/"target="_blank">
+            <img class="lb_partner_logo logo8" src="assets/logo-bazi.webp" alt="logo-bazi"></a>
             <h4 class="logoname">9bazi</h4>
             </div>
-        <div class="card-content">
-            <h2>Username : vrnldemo</h2>
-          
-            <h2>Pass - Asdf1234</h2>
+            <div class="card-content">
+                <h2>
+                  Username : <span id="vrnldemo">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                </h2>
+                <h2>
+                  Password : <span id="password">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                </h2>
+              </div>
 
-        </div>
-    </a>
     </div>
-    <div class="card"><a href="https://world777.vrnlexch.com/"target="_blank">
-        <div class="flip-box-front">
-            <img class="lb_partner_logo logo9" src="assets/world7777.webp" alt="world7777" >
+    <div class="card">
+        <div class="flip-box-front"><a href="https://world777.vrnlexch.com/"target="_blank">
+            <img class="lb_partner_logo logo9" src="assets/world7777.webp" alt="world7777" ></a>
             <h4 class="logoname">World777</h4>
             </div>
-        <div class="card-content">
-            <h2>Username : vrnldemo</h2>
-          
-            <h2>Pass - Asdf1234</h2>
+            <div class="card-content">
+                <h2>
+                  Username : <span id="vrnldemo">vrnldemo</span>
+                  <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+                </h2>
+                <h2>
+                  Password : <span id="password">Asdf1234</span>
+                  <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
+                  <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+                </h2>
+              </div>
 
-        </div>
-    </a>
     </div>
-    <div class="card"><a href="https://lcexch.vrnlexch.com/" target="_blank">
+    <div class="card">
         <div class="flip-box-front">
-            <img class="lb_partner_logo logo10" src="assets/lcexch.webp" alt="lcexch">
+            <a href="https://lcexch.vrnlexch.com/" target="_blank">
+                <img class="lb_partner_logo logo10" src="assets/lcexch.webp" alt="lcexch">
+            </a>
             <h4 class="logoname">Lcexch</h4>
-            </div>
-        <div class="card-content">
-            <h2>Username : vrnldemo</h2>
-          
-            <h2>Pass - Asdf1234</h2>
-
         </div>
-    </a>
+        <div class="card-content">
+            <h2>
+              Username : <span id="vrnldemo">vrnldemo</span>
+              <i class="fas fa-copy" (click)="copytoclip('vrnldemo')" [style.display]="copyed === 'vrnldemo' ? 'none' : 'inline'"></i>
+              <i class="fas fa-check copy-success" *ngIf="copyed === 'vrnldemo'"></i>
+            </h2>
+            <h2>
+              Password : <span id="password">Asdf1234</span>
+              <i class="fas fa-copy" (click)="copytoclip('password')" [style.display]="copyed === 'password' ? 'none' : 'inline'"></i>
+              <i class="fas fa-check copy-success icon" *ngIf="copyed === 'password'"></i>
+            </h2>
+          </div>
+          
+          
+          
+          
     </div>
+
 </div>
 </div>
+
 <app-footer></app-footer>
