--- a/src/app/our-theme/our-theme.component.css
+++ b/src/app/our-theme/our-theme.component.css
@@ -260,11 +260,28 @@ margin-left: 20px;
         padding-bottom: 10px;
     }
 }
-
-
+.fa-copy {
+    margin-left: 20px;
+}
+.icon{
+    margin-left: 56px;
+}
+.fa-check{
+    margin-left: 20px;
+}
+.fa-copy {
+    cursor: pointer;  
+  }
+  
+  .fa-check {
+    color: green;
+  }
 .theme_header{
     color: #a0c228;
     font-size: 35px;
     font-weight: 600;
     font-family: 'Poppins';
 }
+
+
+
