--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -35,12 +35,12 @@
           <i class="fa-solid fa-phone"></i> Contact us!
         </button>
       </div>
-      <div class="platform_col_2">
+      <div class="platform_col_2" >
         <img
           class="platform_img"
-          src="assets/sirplay-vrnl-1.webp"
-        width="544" height="310"
-        alt="vrnl">
+          src="assets/vrnl image 11.webp"
+        width="728" height="392"
+        alt="One Platform, many solutions">
         <div class="platform_you_tube">
           <a href="#"
             ><img
