--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -143,7 +143,7 @@
       <img
         class="images_benefit_1"
         src="assets/Sirplay image 5.webp"
-        alt="vrnl"
+        alt="complete Sports betting software"
       />
     </div>
   </div>
@@ -185,7 +185,7 @@
 <section>
   <div class="sportsbetting-crypto-sports-main">
     <div class="sportsbetting-crypto-sports-col1">
-      <img class="phone_images" src="assets/Sirplay image 9.webp" alt="B2C sports" />
+      <img class="phone_images" src="assets/Sirplay image 9.webp" alt="B2C sports betting" />
     </div>
     <div class="sportsbetting-crypto-sports-col2">
       <h2>B2C sports betting software</h2>
