--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -7,7 +7,7 @@
         </div>
 
         <div class="mobile-sports-right"></div>
-            <img class="mobile_images" src="assets/VRNL 211.webp" alt="">
+            <img class="mobile_images" src="assets/VRNL 211.webp" alt="Mobile sports betting software">
 
     </div>
 </section>
@@ -37,7 +37,7 @@
         </div>
         
         <div class="mobile-advantages-right">
-            <img src="assets/VRNL 2.webp" alt="" class="image_1">
+            <img src="assets/VRNL 2.webp" alt="mobile sports betting software" class="image_1">
         </div>
 
     </div>
