--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -36,7 +36,7 @@
         <img
           class="white_label_imgs"
           src="assets/sirplay vrnl 27_11zon.webp"
-          alt="white-label-casino"
+          alt="white label sportsbook"
         />
       </div>
     </div>
@@ -68,7 +68,7 @@
   <section class="custom-sec">
     <div class="cutom-main">
       <div class="custom-img">
-        <img class="custome_img" src="assets/VRNL 3_11zon.webp" alt="white-label-customizations" />
+        <img class="custome_img" src="assets/VRNL 3_11zon.webp" alt="white label customizations" />
       </div>
 
       <div class="head-custom">
