--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -40,7 +40,7 @@
     </div>
 
 <div class="sports_book_col_1">
-<img class="kohli_images" src="assets/online-vrnl-2.webp" alt="kohli_images" width="410" height="504">
+<img class="Online sportsbook software" src="assets/online-vrnl-2.webp" alt="Online sportsbook software" width="410" height="504">
 </div>
 
 </div>
@@ -49,7 +49,7 @@
 <section class="main_feature">
 <div class="fearues_row">
 <div class="features_col">
-<img class="features_images" src="assets/web3_sports.jpg.webp" alt="features_images">
+<img class="features of Online sportsbook software" src="assets/web3_sports.jpg.webp" alt="Online sportsbook software">
 </div>
 <div class="features_col_1">
  <h1 class="feature_header"><span>Online sportsbook software</span><strong> Main features</strong></h1> 
@@ -83,14 +83,14 @@
   </h2>
   <div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
-			<p>We offer <a style="color: #a0c528;" href="#">White Label Casino</a> with over 30.000 games</p>
+			<p>We offer <a style="color: #a0c528;" href="#">White Label Casino</a> with over 1,000 games</p>
 <p>Gaming license and legal Service to start Casino business, the gaming math is secure and certified.</p>
 <p>We have singled up the best gaming providers with the aim of offering you the widest selection of&nbsp;live casino games&nbsp;and&nbsp;casino games available online.</p>
 
 		</div>
 	</div>
   <div class="web_3_igaming_img">
-    <img class="web_images" src="assets/vrnl online sportbook software_11zon (1).jpg" alt="sportbook_software" title="Web3 plateform">
+    <img class="web_images" src="assets/vrnl online sportbook software_11zon (1).jpg" alt="iGaming Casino Platform" title="Web3 plateform">
   </div>
 </div>
 
@@ -121,7 +121,7 @@
       
           <div class="crypto-section5-right">
           <h2>Play at the live casino as if you were directly inside the casino</h2>
-          <img class="live_sec5_imgs" src="assets/sirplay vrnl 19.webp" alt="vrnl_games">
+          <img class="live_sec5_imgs" src="assets/sirplay vrnl 19.webp" alt="Live Casino">
           </div>
         </div>
       
@@ -132,7 +132,7 @@
         <div class="web3_page_row">
           <div class="web_page_col">
       <h1 class="web_3_header">Top online casino providers at World Class</h1>
-      <img class="web_3_imag" src="assets/sirplay online c.webp" alt="vrnl_online">
+      <img class="web_3_imag" src="assets/sirplay online c.webp" alt="Online Casino">
           </div>
           <div class="web_page_col_1">
            <h1 class="web3_header_2"> Online Casino</h1> 
@@ -164,7 +164,7 @@
       
           <div class="crypto-section6-right">
           <h2>Lottery and Bingo games online and retails</h2>
-          <img class="lottery_img" src="assets/sirplay vrnl 13.webp" alt="vrnl13">
+          <img class="lottery_img" src="assets/sirplay vrnl 13.webp" alt="Lottery and Bingo Games">
           </div>
         </div>
       </section>
