--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -68,7 +68,7 @@
     <div class="whites_label">
         <div>
             <span>
-                <img class="explain_img" src="assets/sirplay white s.webp" width="900" height="355" alt="white-label-betting">
+                <img class="explain_img" src="assets/sirplay white s.webp" width="900" height="355" alt="our Casino platforms">
             </span>
         
     </div>
@@ -100,7 +100,7 @@
       <img
           class="casino_sec_img2"
           src="assets/sirplay online c.webp"
-         alt="vrnl online"
+         alt=" Casino White Label"
         />
         </div>
     </div>
