--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 				</a><hr>
 			</li>
 			<li id="cs-45" class="icon-mail">
-				<a target="_blank" href="https://www.instagram.com/vrnl_exchange">
+				<a target="_blank" href="https://www.instagram.com/vrnl_official/">
 					<img src="assets\icons8-instagram.gif"alt="instagram">
 					<span ui-key="displayText">instagram</span></a><hr>
 			</li>
