--- a/src/app/lottery-games/lottery-games.component.html
+++ b/src/app/lottery-games/lottery-games.component.html
@@ -78,7 +78,7 @@
 
 
         <div class="index4-right-img">
-            <img class="lottery_images" src="assets/sirplay vrnl 20.webp" alt="Lottery & Bingo platform">
+            <img class="lottery_images" src="assets/vrnl image 13.webp" alt="Lottery & Bingo platform">
 
         </div>
 
