--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -68,7 +68,7 @@
     <div class="whites_label">
         <div>
             <span>
-                <img class="explain_img" src="assets/sirplay white s.webp" width="900" height="355" alt="our Casino platforms">
+                <img class="explain_img" src="assets/vrnl image 10.webp" width="900" height="355" alt="our Casino platforms">
             </span>
         
     </div>
