--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -38,8 +38,8 @@
       <div class="platform_col_2">
         <img
           class="platform_img"
-          src="assets/vrnl image 11.webp"
-        width="752" height="400"
+          src="assets/sirplay-vrnl-1.webp"
+        width="544" height="310"
         alt="One Platform, many solutions">
         <div class="platform_you_tube">
           <a href="#"
